# USchedule

./: .dockerignore  .env  .gitignore  Dockerfile  app.py  backup.sql  docker-compose.yml  docker-stack.yml  main.py  pyproject.toml  render.yaml  render.yml  test_tracker_admin.py
.github/workflows/: pipeline.yml
Models/: models.py
Scripts/: scripts.py
api_v1/: __init__.py
api_v1/course/: crud.py  schemas.py  views.py
api_v1/group/: crud.py  schemas.py  views.py
api_v1/status/: crud.py  schemas.py  views.py
api_v1/tracker/: __init__.py  crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  models.py
scripts/: scripts.py  uploadToServer.sh
